<resources>
    <integer-array name="data_image">
        <item>@drawable/slide1</item>
        <item>@drawable/slide2</item>
        <item>@drawable/slide3</item>
    </integer-array>
    <string name="app_name">Organeco</string>
    <string name="register">Daftar</string>
    <string name="name">Nama</string>
    <string name="name_account">Nama Akun</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="not_have_account">Belum punya akun?</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="login">Masuk</string>
    <string name="title_menu_1">Organeco</string>
    <string name="title_menu_2">Emisi Gas Rumah Kaca</string>
    <string name="title_menu_3">Daur Ulang Kompos</string>
    <string name="title_menu_4">Optimalkan Praktik Pertanian Anda!"</string>
    <string name="desc_menu_1">Organeco, aplikasi inovatif untuk petani atau pengkebun, memberikan rekomendasi pupuk ramah lingkungan melalui analisis tanah dan panduan penggunaan pupuk organik.</string>
    <string name="desc_menu_2">Dapat membuat suatu metode atau teknik penggunaan pupuk organik yang tidak menghasilkan gas emisi yang merugikan lingkungan.</string>
    <string name="desc_menu_3">Aplikasi yang dirancang untuk membantu petani dan individu yang terlibat dalam pertanian dalam menggunakan pupuk yang ramah lingkungan.</string>
    <string name="desc_menu_4">"Ubah praktik pertanianmu dan perkebunanmu, kurangi dampak negatif, dan beralih ke pupuk ramah lingkungan dengan aplikasi ini!"</string>
    <string name="get_started">Memulai</string>
    <string name="guest">Tamu</string>
    <string name="Login_error">please check again</string>
    <string name="Login_form_error">Invalid form</string>
    <string name="password_error">Pssword kurang dari 6 karakter</string>
    <string name="logout">Keluar</string>
    <string name="profile">Profil</string>
    <string name="recommendetion_fertilizer">Rekomendasi Pupuk</string>
    <string name="recommended_fetilizer">Rekomendasi Pupuk</string>
    <string name="selected_item">Selected item:</string>
    <string name="arrow_back">Panah Kembali</string>
    <string name="temperature">Suhu</string>
    <string name="humidity">Kelembapan Udara</string>
    <string name="moisture">Kelembapan Tanah</string>
    <string name="soil_type">Tipe Tanah</string>
    <string name="potasium">Potasium</string>
    <string name="phosphorous">Phosphorous</string>
    <string name="count">Hitung</string>
    <string name="plant_type">Tipe Tanaman</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="detail_fertilizer">Detail Pupuk</string>
    <string name="detail_img_fertilizer">Detail Gambar Pupuk</string>
    <string name="name_plant">Nama Tanaman</string>
    <string name="plante_type_detail">Jenis Tanaman</string>
    <string name="vegetable">Sayuran</string>
    <string name="description_detail">Deskripsi</string>
    <string name="button_share">Tombol Button Share Content</string>
    <string name="logo_organeco">Logo Organeco</string>
    <string name="halo">Halo, </string>
    <string name="fertilizer_that_is_often_used">Pupuk yang sering dipakai</string>
    <string name="iot_moisture">IoT Kelembapan</string>
    <string name="send_to_calculator">Kirim Data ke Kalkulator</string>
    <string name="emission_gas">Emisi Gas</string>
    <string name="friendly_fertilizer">Pupuk Ramah Lingkungan</string>
    <string name="agricultural_practices">Praktik Pertanian</string>
    <string name="background_plant">Background Tanaman</string>
    <string name="icon_profile">icon profile</string>
    <string name="icon_email">icon Email</string>
    <string name="photo_fertilizer">photo fertilizer</string>
    <string name="slider_fertilizer">Slider Pupuk</string>
    <string name="cek_kelayakan_subsidi_pupuk">Cek Kelayakan Subsidi Pupuk</string>
    <string name="npk">NPK</string>
    <string name="urea">Urea</string>
    <string name="luas_lahan_m_sup_2_sup">Luas Lahan (M<sup>2</sup>)</string>
    <string name="check_subsidi">Cek Subsidi</string>
    <string name="fertilizer_type">Jenis Pupuk</string>
    <string name="farmer_group">Termasuk dalam Kelompok Tani</string>
    <string name="farmer_card">Mempunyai kartu Tani</string>
    <string name="number_moisture">45.90980</string>
    <string name="result_recomendation">Hasil Rekomendasi</string>
    <string name="dry">60 – 100     = Kering</string>
    <string name="normal">40 – 60 = Normal</string>
    <string name="wet">0 – 39 = Basah</string>
    <string name="save">Simpan</string>
    <string name="home">Kembali ke Halaman Utama</string>
    <string name="input">Masukan</string>
    <string name="fertilizer_that_suits_you">Pupuk yang cocok untukmu adalah</string>
    <string name="crop_type">Jenis Tanaman</string>
    <string name="colon">:</string>
    <string name="organeco">Organeco</string>
    <string name="no_data">Tidak ada data</string>

    <string-array name="Jenis_tanah">
        <item>Berpasir</item>
        <item>Berlumpur</item>
        <item>Hitam</item>
        <item>Merah</item>
        <item>Tanah liat</item>
    </string-array>

    <string-array name="Jenis_Tanaman">
        <item>Jagung</item>
        <item>Tebu</item>
        <item>Kapas</item>
        <item>Tembakau</item>
        <item>Padi</item>
        <item>Jelai</item>
        <item>Gandum</item>
        <item>Millet</item>
        <item>Biji Minyak</item>
        <item>Biji-bijian</item>
        <item>Kacang-kacangan Tanah</item>
    </string-array>

    <string-array name="Jenis_Komoditas">
        <item>Padi</item>
        <item>Jagung</item>
        <item>Kedelai</item>
        <item>Cabai</item>
        <item>Bawang Merah</item>
        <item>Bawang Putih</item>
        <item>Kopi</item>
        <item>Tebu</item>
        <item>Kakao</item>
    </string-array>

</resources>