<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_700"
    app:layoutDescription="@xml/activity_onboarding_scene"
    tools:context=".view.activity.start.OnboardingActivity">

    <Button
        android:id="@+id/btnStarted"
        style="@style/textH4White"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:alpha="0"
        android:background="@drawable/rounded_bg_button"
        android:text="@string/get_started"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/menu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivPlant1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:contentDescription="@string/background_plant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <ImageView
        android:id="@+id/logoMenu1"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/logo_srp"
        android:src="@drawable/image1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/logoMenu2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@string/emission_gas"
        android:src="@drawable/image2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/logoMenu3"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@string/friendly_fertilizer"
        android:src="@drawable/image3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/logoMenu4"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@string/agricultural_practices"
        android:src="@drawable/image4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/titleMenu1"
        style="@style/textH2White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/title_menu_1"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu1"
        app:layout_constraintStart_toStartOf="@+id/logoMenu1"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu1" />

    <TextView
        android:id="@+id/descMenu1"
        style="@style/textRegular1White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/desc_menu_1"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu1"
        app:layout_constraintStart_toStartOf="@+id/titleMenu1"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu1" />

    <TextView
        android:id="@+id/titleMenu2"
        style="@style/textH2White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/title_menu_2"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu2"
        app:layout_constraintStart_toStartOf="@+id/logoMenu2"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu2" />

    <TextView
        android:id="@+id/descMenu2"
        style="@style/textRegular1White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/desc_menu_2"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu2"
        app:layout_constraintStart_toStartOf="@+id/titleMenu2"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu2" />

    <TextView
        android:id="@+id/titleMenu3"
        style="@style/textH2White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/title_menu_3"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu3"
        app:layout_constraintStart_toStartOf="@+id/logoMenu3"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu3" />

    <TextView
        android:id="@+id/descMenu3"
        style="@style/textRegular1White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/desc_menu_3"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu3"
        app:layout_constraintStart_toStartOf="@+id/titleMenu3"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu3" />

    <TextView
        android:id="@+id/titleMenu4"
        style="@style/textH2White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/title_menu_4"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu4"
        app:layout_constraintStart_toStartOf="@+id/logoMenu4"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu4" />

    <TextView
        android:id="@+id/descMenu4"
        style="@style/textRegular1White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/desc_menu_4"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu4"
        app:layout_constraintStart_toStartOf="@+id/titleMenu4"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGuest"
        style="@style/textH4White"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:alpha="0"
        android:background="@drawable/rounded_bg_button_three"
        android:text="@string/guest"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="32dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintEnd_toStartOf="@+id/menu2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/green_500" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="12dp"
        android:layout_height="12dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu1"
        app:layout_constraintEnd_toStartOf="@+id/menu3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu1"
        app:layout_constraintTop_toTopOf="@+id/menu1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/green_500" />


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="12dp"
        android:layout_height="12dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu2"
        app:layout_constraintEnd_toStartOf="@+id/menu4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu2"
        app:layout_constraintTop_toTopOf="@+id/menu2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/green_500" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu4"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginEnd="32dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu3"
        app:layout_constraintTop_toTopOf="@+id/menu3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/green_500" />

</androidx.constraintlayout.motion.widget.MotionLayout>